--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.16",
     "@rolemodel/optics": "^2.1.4",
+    "@rolemodel/turbo-confirm": "^2.1.1",
     "sass": "^1.89.2"
   }
 }
